signin and registration fix; spasibo pasha - tvoi z-index'u prosto cosmos

--- a/src/scss/blocks/registration.scss
+++ b/src/scss/blocks/registration.scss
@@ -8,7 +8,7 @@
   display: none;
   top: 0;
   left: 0;
-  z-index:-1;
+  z-index:100;
 }
 .registration:before{
 	background: rgba(0,159,229,0.8);
@@ -93,13 +93,13 @@
 	text-align: center;
 }
 .registration__close{
-   	font-size: 65px;
-    /* float: right; */
     position: absolute;
+    font-size: 55px;
+    font-weight: 100;
+    top: 0;
     right: 10px;
     color: red;
     cursor: pointer;
-    z-index: -1;
 }
   @media (max-aspect-ratio: 3/3) {
   	.registration{
